# VMX-remotes

./: .gitattributes  .gitignore  _test_circle.py  color_square_detector.py  color_squares_preferences.json  config.py  hsv_converter.py  init.py  pyproject.toml  robot.py  save_preferences.py  test_camera.py  test_local.py
src/vmx_remotes/: __init__.py  color_range.py  color_square_detector.py  config.py  hsv_converter.py  robot_app.py  save_preferences.py
