[project]
name = "VMX-remotes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.2.1", # cscoreに必要
    "opencv-python>=4.11.0.86",
    "pynetworktables>=2021.0.0",
    "robotpy[cscore]>=2025.3.2.0",
]


[tool.ruff]
line-length = 100


[tool.robotpy]
#
# Use this configuration file to control what RobotPy packages are installed
# on your RoboRIO
#

# Version of robotpy this project depends on
robotpy_version = "2025.3.2.0"

# Which extra RobotPy components should be installed
# -> equivalent to `pip install robotpy[extra1, ...]
robotpy_extras = [
    # "all",
    # "apriltag",
    # "commands2",
    "cscore",
    # "navx",
    # "pathplannerlib",
    # "phoenix5",
    # "phoenix6",
    # "rev",
    # "romi",
    # "sim",
    # "xrp",
]

# Other pip packages to install
requires = []
